// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileViewer/BinaryFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 text-muted-foreground flex items-center justify-between border-b px-4 py-2 text-xs"
    >
      <span>
        0
         lines · 
        24.0 KB
      </span>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground size-7"
        title="Copy"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy size-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <div
      class="text-muted-foreground px-4 py-8 text-center text-sm"
    >
      Binary file — 
      24.0 KB
    </div>
  </div>
</div>
`;

exports[`FileViewer/Loading matches snapshot 1`] = `
<div>
  <div
    class="divide-border border-border divide-y rounded-md border"
  >
    <div
      class="flex items-center gap-2 px-4 py-2"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-48"
      />
    </div>
    <div
      class="p-4"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-64 w-full"
      />
    </div>
  </div>
</div>
`;

exports[`FileViewer/TruncatedFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 text-muted-foreground flex items-center justify-between border-b px-4 py-2 text-xs"
    >
      <span>
        4
         lines · 
        1.0 MB
         · truncated
      </span>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground size-7"
        title="Copy"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy size-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex overflow-x-auto font-mono text-xs leading-5"
    >
      <div
        aria-hidden="true"
        class="border-border bg-muted/20 text-muted-foreground/50 border-r px-4 py-4 text-right select-none"
      >
        <div>
          1
        </div>
        <div>
          2
        </div>
        <div>
          3
        </div>
        <div>
          4
        </div>
      </div>
      <pre
        class="flex-1 overflow-visible px-4 py-4"
      >
        <code
          class="hljs !bg-transparent !p-0"
        >
          line 
          <span
            class="hljs-number"
          >
            1
          </span>
          
line 
          <span
            class="hljs-number"
          >
            2
          </span>
          
line 
          <span
            class="hljs-number"
          >
            3
          </span>
          
... (truncated)
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`FileViewer/TypeScriptFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 border-b px-4 py-2"
    >
      <div
        class="animate-pulse rounded-md bg-primary/10 h-4 w-32"
      />
    </div>
    <div
      class="flex gap-4 p-4"
    >
      <div
        class="space-y-1.5"
      >
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5 w-6"
        />
      </div>
      <div
        class="flex-1 space-y-1.5"
      >
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 70.27272538529849%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 84.39202253245477%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 36.70967368601532%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 87.50159030488214%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 51.86083821665096%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 46.479699116022175%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 36.75406000862486%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 60.27590888571913%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 38.67713014525041%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 86.91154246154659%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 77.40682922983703%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 82.74792087067682%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 61.364498248188944%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 48.028107813055215%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 61.27378677034177%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 50.634245170950734%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 40.67974048538118%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 87.04517503265906%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 31.598566849419893%;"
        />
        <div
          class="animate-pulse rounded-md bg-primary/10 h-3.5"
          style="width: 51.4887047773234%;"
        />
      </div>
    </div>
  </div>
</div>
`;
